[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/Fonts/Pixeled.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://scripts/healthbar.gd" type="Script" id=2]
[ext_resource path="res://scripts/HintBox.gd" type="Script" id=4]

[sub_resource type="DynamicFont" id=1]
size = 23
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[node name="Overlay" type="Node2D"]
position = Vector2( 1757, 45 )

[node name="ViewportContainer" type="ViewportContainer" parent="."]
margin_left = 51.0
margin_top = -30.0
margin_right = 51.0
margin_bottom = -6.0

[node name="HealthBar" type="HBoxContainer" parent="ViewportContainer"]
margin_right = 84.0
margin_bottom = 24.0
script = ExtResource( 2 )
__meta__ = {
"_edit_lock_": true
}

[node name="ExtraBloodDrop" type="TextureRect" parent="ViewportContainer/HealthBar"]
margin_bottom = 24.0

[node name="BloodDrop3" type="TextureRect" parent="ViewportContainer/HealthBar"]
margin_left = 4.0
margin_right = 4.0
margin_bottom = 24.0

[node name="BloodDrop2" type="TextureRect" parent="ViewportContainer/HealthBar"]
margin_left = 8.0
margin_right = 8.0
margin_bottom = 24.0

[node name="BloodDrop1" type="TextureRect" parent="ViewportContainer/HealthBar"]
margin_left = 12.0
margin_right = 12.0
margin_bottom = 24.0

[node name="HintBox" type="MarginContainer" parent="."]
margin_left = -1152.0
margin_top = 745.0
margin_right = -576.0
margin_bottom = 1033.0
script = ExtResource( 4 )

[node name="Dialog" type="TextureRect" parent="HintBox"]
margin_right = 576.0
margin_bottom = 288.0
stretch_mode = 5
__meta__ = {
"_edit_lock_": true
}

[node name="Label" type="Label" parent="HintBox"]
modulate = Color( 0, 0, 0, 1 )
margin_top = 111.0
margin_right = 576.0
margin_bottom = 176.0
custom_fonts/font = SubResource( 1 )
align = 1
valign = 1
percent_visible = -0.125
__meta__ = {
"_edit_lock_": true
}

[node name="CenterContainer" type="CenterContainer" parent="HintBox"]
margin_right = 576.0
margin_bottom = 288.0
__meta__ = {
"_edit_lock_": true
}
